adding introduction of control chapter

--- a/manuscript.bib
+++ b/manuscript.bib
@@ -50,6 +50,17 @@
   volume = {29}
 }
 
+@article{berberich2025overview,
+  title = {An Overview of Systems-Theoretic Guarantees in Data-Driven Model Predictive Control},
+  author = {Berberich, Julian and Allg{\"o}wer, Frank},
+  year = 2025,
+  journal = {Annual Review of Control, Robotics, and Autonomous Systems},
+  volume = {8},
+  number = {1},
+  pages = {77--100},
+  publisher = {Annual Reviews}
+}
+
 @inproceedings{berkenkamp2015safe,
   title = {Safe and Robust Learning Control with {{Gaussian}} Processes},
   booktitle = {2015 European Control Conference ({{ECC}})},
@@ -145,6 +156,18 @@
   keywords = {Artificial Intelligence,Control,Machine Learning,Mechatronics,Natural Language Processing (NLP),Robotics,Simulation and Modeling}
 }
 
+@article{Brunke2022May,
+  title = {Safe Learning in Robotics: {{From}} Learning-Based Control to Safe Reinforcement Learning},
+  author = {Brunke, Lukas and Greeff, Melissa and Hall, Adam W. and Yuan, Zhaocong and Zhou, Siqi and Panerati, Jacopo and Schoellig, Angela P.},
+  year = 2022,
+  month = may,
+  journal = {Annu. Rev. Control Rob. Auton. Syst.},
+  number = {Volume 5, 2022},
+  pages = {411--444},
+  publisher = {Annual Reviews},
+  doi = {10.1146/annurev-control-042920-020211}
+}
+
 @article{burkart2021survey,
   title = {A Survey on the Explainability of Supervised Machine Learning},
   author = {Burkart, Nadia and Huber, Marco F},
@@ -221,6 +244,17 @@
   year = 2021,
   school = {Toulouse 3},
   file = {C:\Users\uif72473\Zotero\storage\499H5V38\Dato - 2021 - Apprentissage permanent par feedback endogène, app.pdf}
+}
+
+@article{de2005tutorial,
+  title = {A Tutorial on the Cross-Entropy Method},
+  author = {De Boer, Pieter-Tjerk and Kroese, Dirk P and Mannor, Shie and Rubinstein, Reuven Y},
+  year = 2005,
+  journal = {Annals of operations research},
+  volume = {134},
+  number = {1},
+  pages = {19--67},
+  publisher = {Springer}
 }
 
 @incollection{dietterichEnsembleMethodsMachine2000,
@@ -568,6 +602,23 @@
   isbn = {978-1-4419-9326-7},
   langid = {english},
   keywords = {Combination Rule,Concept Drift,Ensemble Member,Incremental Learning,Majority Vote}
+}
+
+@article{prag2022toward,
+  title = {Toward Data-Driven Optimal Control: {{A}} Systematic Review of the Landscape},
+  author = {Prag, Krupa and Woolway, Matthew and Celik, Turgay},
+  year = 2022,
+  journal = {IEEE Access},
+  volume = {10},
+  pages = {32190--32212},
+  publisher = {IEEE}
+}
+
+@article{rawlings2017model,
+  title = {Model Predictive Control: Theory, Computation, and Design, Vol. 2},
+  author = {Rawlings, James Blake and Mayne, David Q and Diehl, Moritz and others},
+  year = 2017,
+  journal = {Madison, WI: Nob Hill Publishing}
 }
 
 @inproceedings{ribeiro2016should,
