adding beginning of first section fo control chapter

--- a/manuscript.bib
+++ b/manuscript.bib
@@ -50,6 +50,17 @@
   volume = {29}
 }
 
+@article{bentley1975multidimensional,
+  title = {Multidimensional Binary Search Trees Used for Associative Searching},
+  author = {Bentley, Jon Louis},
+  year = 1975,
+  journal = {Communications of the ACM},
+  volume = {18},
+  number = {9},
+  pages = {509--517},
+  publisher = {ACM New York, NY, USA}
+}
+
 @article{berberich2025overview,
   title = {An Overview of Systems-Theoretic Guarantees in Data-Driven Model Predictive Control},
   author = {Berberich, Julian and Allg{\"o}wer, Frank},
@@ -188,6 +199,16 @@
   publisher = {MDPI},
   keywords = {ToRead},
   file = {C:\Users\uif72473\Zotero\storage\B6Y4XPVK\Canese et al. - 2021 - Multi-agent reinforcement learning A review of ch.pdf}
+}
+
+@article{chai2019review,
+  title = {A Review of Optimization Techniques in Spacecraft Flight Trajectory Design},
+  author = {Chai, Runqi and Savvaris, Al and Tsourdos, Antonios and Chai, Senchun and Xia, Yuanqing},
+  year = 2019,
+  journal = {Progress in aerospace sciences},
+  volume = {109},
+  pages = {100543},
+  publisher = {Elsevier}
 }
 
 @article{changLIBSVMLibrarySupport2011,
@@ -360,6 +381,25 @@
   year = 2023,
   journal = {IEEE Transactions on Neural Networks and Learning Systems},
   publisher = {IEEE}
+}
+
+@article{guting1994introduction,
+  title = {An Introduction to Spatial Database Systems},
+  author = {G{\"u}ting, Ralf Hartmut},
+  year = 1994,
+  journal = {the VLDB Journal},
+  volume = {3},
+  number = {4},
+  pages = {357--399},
+  publisher = {Springer}
+}
+
+@inproceedings{guttman1984r,
+  title = {R-Trees: {{A}} Dynamic Index Structure for Spatial Searching},
+  booktitle = {Proceedings of the 1984 {{ACM SIGMOD}} International Conference on Management of Data},
+  author = {Guttman, Antonin},
+  year = 1984,
+  pages = {47--57}
 }
 
 @article{haarnoja2018soft,
@@ -806,6 +846,15 @@
   pages = {1177--1193},
   publisher = {IEEE},
   isbn = {2162-237X}
+}
+
+@article{zhan2021model,
+  title = {Model-Based Offline Planning with Trajectory Pruning},
+  author = {Zhan, Xianyuan and Zhu, Xiangyu and Xu, Haoran},
+  year = 2021,
+  journal = {arXiv preprint arXiv:2105.07351},
+  eprint = {2105.07351},
+  archiveprefix = {arXiv}
 }
 
 @article{zhang2023sequential,
